fix: display card__name text-content on overflow

--- a/src/components/Gallery/gallery.scss
+++ b/src/components/Gallery/gallery.scss
@@ -72,6 +72,7 @@
 .card {
     position: relative;
     overflow: hidden;
+    word-break: break-all;
     cursor: pointer;
     border-radius: 10px;
     background-color: rgba(0, 0, 0, 0.5);
